- HTML5's user defined attributes are supported. class="IM[...]" should be data-im="...",
  class="_im_repeater" -> data-im-control="repeater",  class="_im_enclosure" -> data-im-control="enclosure",
  class="_im_post" -> data-im-control="post", class="_im_for_noresult_" -> data-im-control="noresult",
  class="IM_WIDGET[...]" -> data-im-widget="...", name="IM[survey@q4]" -> data-im-group="...."
- Taking care in case of Accept-Language: header wasn't set (i.e. nothing defined language in browser).
- Add the meta tag with "X-UA-Compatible" to all samples, it forces Internet Explorer to
  work as its native document mode.
- [BUG FIX] Fix the issue of the Native Authentication (version 4.0 only).
- [BUG FIX] Fix the issue of GenerateJSCode.php to work with PHP 5.2 again (version 4.0 only).
- [BUG FIX] Modify dateArrayFromFMDate method of DataConverter_FMDateTime class to fix compatibility with PHP 5.2.
- [BUG FIX] Correct the confirmation message when clicking the deleting record button on the navigation bar.
  (Thanks to Kentaro Suzuki).
- [BUG FIX] The delete button on the navigation bar works correctly when specifying INTERMediator.pagedSize = 1.

Ver.4.0 (2013/12/4)
- File hierarchy changed for easily involving the pulled sources into developing web apps
- Modify FX.php to fix compatibility with FileMaker Server 13.
- Also updates below from Ver.3.0

Ver.4 (2013/12/4)=========================================================

[Major differences from Ver.3]
- [INFO] INTER-Mediator requires FileMaker Server 10 or later, OS X v10.6 or later if using FileMaker Server.
- FileMaker Server 13 supported with the XML sharing.
- Support FileMaker's portal objects (by specifying 'relation' => array('portal' => true) ).
- Enable omitting to place the primary key field object on a layout when using FileMaker Server
  (by specifying 'key' => '-recid').
- The definition file editor works reading/writing. You can call it at the start of logs on debug mode.